<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.RegisterActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/register_gif"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/register" />

    <androidx.cardview.widget.CardView
        android:id="@+id/reg_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_gif"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="20dp"
        android:elevation="20dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:screenReaderFocusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_message"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/set_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/reg_cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/regbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_back_login"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/reg_button"
                android:textAllCaps="false"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/reg_to_log"
        android:textColor="@color/teal_200"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/reg_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

</RelativeLayout>